TEST_PROGRAMS/VALID/07/func_decl.go
package main
// Long form, one id with one type
func f(a int, b int, c string, d int) {
	return
}
// // Short form, many ids with one type
func f(a, b int, c string, d int) string {
	return c
}
